--- a/playground/summary.ipynb
+++ b/playground/summary.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "aa99670d",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,9 @@
     "    \n",
     "    Also, please provide a URL-friendly string that summarizes the title of the research (slug).\n",
     "    Although I talked to you in English, but you need to make sure that your answer is in {lang}.\n",
+    "    \"\"\" + \"\"\"\n",
     "    Also, you need to know that, your structured answer will rendered in markdown, so please also use the markdown syntax, especially for latex formula using $...$ or $$...$$.\n",
+    "    Don't write equations like `θ_base`, this is wrong and ugly. Write like $θ_{base}$ instead.\n",
     "    Do not hide your critical thoughts in the reasoning step. Show them in method and further though parts.\n",
     "    \"\"\"\n",
     "    \n",
